add js files and css

--- a/index.html
+++ b/index.html
@@ -6,6 +6,18 @@
     <title>Aloha Apparel Co.</title>
     <link rel="stylesheet" type="css/text" href="https://meyerweb.com/eric/tools/css/reset/reset.css">
     <meta name="viewport" content="wclassth=device-wclassth, initial-scale=1">
+    <link rel="stylesheet" href="https://unpkg.com/flickity@2/dist/flickity.min.css">
+    <script src="https://unpkg.com/flickity@2/dist/flickity.pkgd.min.js"></script>
+   
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.10/css/all.css" integrity="sha384-+d0P83n9kaQMCwj8F4RJB66tzIwOKmrdb46+porD/OvrJ+37WqIM7UoBtwHO6Nlg" crossorigin="anonymous">
+   <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" type="text/css" media="screen" href="css/style2.css" />
+    <script src="carousel.js"></script>
+    <!-- Put your own css after external fonts    -->
+    <meta name="description" content="Clothing by Aloha Apparel Co">
+    <meta name="author" content="P Chong">
+    <!-- <script src="main.js"></script> -->
+
    
     </head>
     <body>
@@ -245,6 +257,6 @@
 
 
 
-
+                <script src="scripts.js"></script>
     </body>
     </html>
