--- a/index.html
+++ b/index.html
@@ -257,6 +257,9 @@
 
 
 
+                
+                <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
                 <script src="scripts.js"></script>
+
     </body>
     </html>
